# ai-cli-resources

./: .gitignore  README.md  pyproject.toml
.ai-cli/shared/agents/: kitt-angular-perfectionist-reviewer.md
.ai-cli/shared/commands/: kitt-create-meta-prompt.md  kitt-create-plan.md  kitt-create-slash-command.md  kitt-create-subagent.md  kitt-debug.md
.ai-cli/shared/skills/kitt-create-agent-skills/workflows/: create-domain-expertise-skill.md
.ai-cli/shared/skills/kitt-create-plans/templates/: phase-prompt.md
agents/: architect.md  code-reviewer.md  kitt-code-auditor.md  kitt-refactor.md  mentor.md
commands/: kitt-create-hook.md
skills/kitt-create-plans/workflows/: plan-phase.md
src/ai_cli_mcp/: __init__.py  cli.py  conversion_manifest.py  converters.py  init.py  server.py
